# jupyterlab-accessible-themes

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  babel.config.js  environment.yml  install.json  jest.config.js  lerna.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: add-pr-to-project.yml  add-to-project.yml  binder-on-pr.yml  build.yml  check-links.yml
binder/: environment.yml  postBuild
jupyterlab_accessible_themes/: __init__.py  _version.py
schema/: plugin.json
ui-tests/: jupyter_server_test_config.py  package.json  playwright.config.js
ui-tests/tests/: jupyterlab_accessible_themes.spec.ts
