[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[project]
name = "jupyterlab_accessible_themes"
requires-python = ">=3.8"

[tool.jupyter-packaging.options]
skip-if-exists = ["jupyterlab_accessible_themes/labextension/static/style.js"]
ensured-targets = [
    "jupyterlab_accessible_themes/labextension/static/style.js",
    "jupyterlab_accessible_themes/labextension/package.json"
]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = [
    "jupyterlab_accessible_themes/labextension/**",
    "yarn.lock",
    ".*",
    "package-lock.json"
]

[tool.ruff]
builtins = ["c"]
ignore = ["C", "D400", "E", "F401", "F841", "W", "E501", "D104"]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
select = ["C4", "C9", "D", "E", "F", "W"]

[tool.ruff.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".
