[build-system]
requires = ["hatchling", "jupyterlab<4", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-accessible-themes"
readme = "README.md"
description = "A collection of accessible JupyterLab themes"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = [
    "jupyter",
    "jupyterlab",
    "accessibility",
    "themes",
    "dark theme",
    "light theme"
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
authors = [{ name = "Tania Allard", email = "trallard@bitsandchips.me" }]
# TODO: add other authors
# we get the version directly fromt the package.json file
dynamic = ["version"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.build.hooks.version]
path = "jupyterlab_accessible_themes/_version.py"

[project.urls]
Source = "https://github.com/Quansight-Labs/jupyterlab-accessible-themes"
Issues = "https://github.com/github_username/jupyterlab-accessible-themes/issues"
PyPi = "https://pypi.org/project/jupyterlab-accessible-themes/"
conda = "https://anaconda.org/conda-forge/jupyterlab-accessible-themes"

[tool.hatch.build.targets.sdist]
include = [
    "/jupyterlab_accessible_themes",
    "/packages",
    "/package.json",
    "/install.json",
    "/tsconfig.json"
]
artifacts = ["jupyterlab_accessible_themes/labextensions"]
exclude = [".github", "binder", "ui-tests"]

[tool.hatch.build.targets.wheel]
include = ["/jupyterlab_accessible_themes"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_accessible_themes/labextension" = "share/jupyter/labextensions/jupyterlab-themes"
"share/jupyter/labextensions/@jupyterlab-accessible-themes/jupyterlab-theme-githublight" = "jupyterlab_accessible_themes/labextensions/githublight/package.json"
"share/jupyter/labextensions/@jupyterlab-accessible-themes/jupyterlab-theme-pitayasmoothie" = "jupyterlab_accessible_themes/labextensions/pitayasmoothie/package.json"
"install.json" = "share/jupyter/labextensions/jupyterlab-themes/install.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
# list of expected file paths after building a version sdist or wheel
ensured-targets = ["jupyterlab_accessible_themes/labextension/package.json"]
install-pre-commit-hook = true

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
editable_build_cmd = "build"
source_dir = "packages"
npm = "jlpm"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab<4'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.ruff]
builtins = ["c"]
# E501 Line too long (158 > 100 characters)
# D400: First line should end with a period
# F401: Imported but unused
# F841: Local variable is assigned to but never used
ignore = ["D400", "E501"]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
# A: builtins
# F: Pyflakes
# E,W: pycodestyle
# C4: flake8-comprehensions
# D: pydocstyle
select = ["A", "B", "C", "C4", "C9", "D", "E", "F", "W", "ICN"]

[tool.ruff.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".

[tool.ruff.per-file-ignores]
# No explicit stacklevel in  __init__.py
"jupyterlab_accessible_themes/__init__.py" = ["B028"]
